# contrail-operator

./: .bazelrc  .dockerignore  .gitignore  .golangci.yml  BUILD.bazel  CONTRIBUTING.md  DEVELOPMENT.md  Jenkinsfile  Makefile  Operator.md  QUICKSTART-LINUX.md  QUICKSTART-MACOS.md  README.md  WORKSPACE  WORKSPACE.bak  bazel-bin  bazel-contrail-operator  bazel-out  bazel-testlogs  cloudbuild.yaml  go.mod  go.mod.bak  go.mod.bak2  go.mod.bak3  go.sum  go.sum.bak3  go.sum.old  id_rsa.enc  nogo.json
cmd/crdsloader/: BUILD.bazel
cmd/manager/: .gitignore  1  BUILD.bazel  main.go
contrail-provisioner/: BUILD.bazel  Dockerfile  Dockerfile.debug  Makefile  README.md  main.go
contrail-provisioner/analyticsnode/: BUILD.bazel  analyticsnode.go
contrail-provisioner/config/: analyticsnodes.yaml  apiserver.yaml  confignodes.yaml  vrouternodes.yaml
contrail-provisioner/confignode/: BUILD.bazel  confignode.go
contrail-provisioner/contrail-go-types/: BUILD.bazel  access_control_list.go  acl_entries_type.go  action_list_type.go  address_families.go  address_group.go  address_type.go  alarm.go  alarm_or_list.go  alias_ip.go  alias_ip_pool.go  allocation_pool_type.go  allowed_address_pair.go  allowed_address_pairs.go  analytics_alarm_node.go  analytics_node.go  analytics_snmp_node.go  api_access_list.go  application_policy_set.go  asn_range_type.go  attachment_info_type.go  authentication_data.go  authentication_key_item.go  autonomous_systems_type.go  b_g_paa_s_control_node_zone_attributes.go  b_g_paa_service_parameters_type.go  baremetal_port_group_info.go  baremetal_port_info.go  baremetal_server_info.go  bgp_as_a_service.go  bgp_family_attributes.go  bgp_peering_attributes.go  bgp_prefix_limit.go  bgp_router.go  bgp_router_params.go  bgp_session_attributes.go  bgpvpn.go  bridge_domain.go  card.go  cli_config.go  (+216 more)
contrail-provisioner/contrailclient/: BUILD.bazel  contrailclient.go  contrailclient_test.go
contrail-provisioner/contrailnode/: BUILD.bazel  contrailnode.go
contrail-provisioner/controlnode/: BUILD.bazel  controlnode.go
contrail-provisioner/databasenode/: BUILD.bazel  databasenode.go
contrail-provisioner/fake/: BUILD.bazel  fake_contrail_client.go
contrail-provisioner/mock/: BUILD.bazel  mock_contrail_client.go
contrail-provisioner/nodemanager/: BUILD.bazel  nodemanager.go
contrail-provisioner/reconcile/: BUILD.bazel  reconcile.go  reconcile_test.go
contrail-provisioner/test/: BUILD.bazel  mock_contrail_client.go
contrail-provisioner/types/: BUILD.bazel  analytics.go  base.go  config.go  control.go  database.go  vrouter.go
contrail-provisioner/vrouter_nodes/: BUILD.bazel  vrouter_nodes.go  vrouter_nodes_test.go
contrail-provisioner/vrouternode/: BUILD.bazel  vrouternode.go  vrouternode_test.go
contrail-provisioner/vrouternodes/: BUILD.bazel  vrouter_nodes.go  vrouter_nodes_test.go
pkg/apis/: BUILD.bazel  addtoscheme_contrail_v1alpha1.go
pkg/apis/contrail/: BUILD.bazel  group.go
pkg/certificates/: BUILD.bazel  cacertificate.go  cacertificate_test.go  certificate.go  certificate_subject.go  certificate_subject_test.go  certificate_templates.go  certificates_test.go  csr_signer_ca.go  csr_signer_ca_k8s.go  csr_signer_ca_k8s_test.go  csr_signer_ca_openshift.go  csr_signer_ca_openshift_test.go  pem.go  sign_csr.go  signer_ca.go  signer_ca_test.go
pkg/controller/: BUILD.bazel  add_cassandra.go  add_command.go  add_config.go  add_contrailcni.go  add_contrailcommand.go  add_contrailmonitor.go  add_contrailmonitorstatus.go  add_control.go  add_devicemanager.go  add_fernetkeymanager.go  add_keystone.go  add_kubemanager.go  add_manager.go  add_memcached.go  add_patroni.go  add_postgres.go  add_provisionmanager.go  add_rabbitmq.go  add_swift.go  add_swiftproxy.go  add_swiftstorage.go  add_vrouter.go  add_webui.go  add_zookeeper.go  controller.go
pkg/controller/cassandra/: BUILD.bazel  cassandra_controller.go  cassandra_controller_test.go  sts.go
pkg/controller/command/: BUILD.bazel  command_config.go  command_config_bootstrap.go  command_config_maps.go  command_controller.go  command_controller_test.go  command_status.go  command_test.go  command_upgrade.go  migration.sh
pkg/controller/config/: BUILD.bazel  config_api_client.go  config_api_client_test.go  config_controller.go  config_controller_test.go  provision.go.bak  sts.go
pkg/controller/contrailcni/: BUILD.bazel  contrailcni_config.go  contrailcni_config_map.go  contrailcni_conroller_test.go  contrailcni_controller.go  contrailcni_controller_test.go  daemonset.go  daemonset_test.go  job.go  job_test.go
pkg/controller/contrailcommand/: BUILD.bazel  contrailcommand_config.go  contrailcommand_config_maps.go  contrailcommand_controller.go  contrailcommand_controller_test.go
pkg/controller/contrailmonitor/: BUILD.bazel  (+2 more)
pkg/job/: BUILD.bazel  job.go  job_test.go
pkg/k8s/: BUILD.bazel  cluster_info.go  cluster_info_test.go  config_map.go  config_map_test.go  csr_signer_ca.go  csr_signer_ca_k8s.go  csr_signer_ca_k8s_test.go  exec.go  k8s.go  owner.go  owner_test.go  secret.go  secret_test.go  service.go  service_test.go
pkg/localvolume/: BUILD.bazel  localvolume.go  localvolume_test.go  volume.go  volume_test.go
pkg/openshift/: BUILD.bazel  cluster_info.go  cluster_info_test.go  csr_signer_ca.go  csr_signer_ca_openshift.go  csr_signer_ca_openshift_test.go  csr_signer_ca_test.go
pkg/volumeclaims/: BUILD.bazel  fake.go  pvc.go  pvc_test.go
ringbuilder/: BUILD.bazel  main.py  requirements.txt
ringcontroller/: BUILD.bazel  README.md  main.py  requirements.txt  ring_controller.py  ring_controller_test.py  test_ring_controller.py
statusmonitor/: BUILD.bazel  Dockerfile.debug  README.md  config.yaml  config_status_monitor.go  config_status_monitor_test.go  control_status_monitor_test.go  main.go  main_test.go
statusmonitor/uves/: BUILD.bazel  control.go  control_test.go
test/e2e/: BUILD.bazel  cluster_test.go  command_test.go  main_test.go  manager_test.go  openstack_test.go  postgres_test.go  settings.go
test/ha_upgrade_e2e/: BUILD.bazel  scale_core_contrail_services_test.go
(+521 files in other folders)
