load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "watcher.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner",
    visibility = ["//visibility:private"],
    deps = [
        "//contrail-provisioner/types:go_default_library",
        "@com_github_juniper_contrail_go_api//:go_default_library",
        "@com_github_juniper_contrail_go_api//types:go_default_library",
        "@in_gopkg_fsnotify_v1//:go_default_library",
        "@in_gopkg_yaml.v2//:go_default_library",
    ],
)

go_binary(
    name = "contrail-provisioner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
