load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "watcher.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner",
    visibility = ["//visibility:private"],
    deps = [
        "//contrail-provisioner/contrail-go-types:go_default_library",
        "//contrail-provisioner/types:go_default_library",
        "//contrail-provisioner/vrouternodes:go_default_library",
        "@com_github_juniper_contrail_go_api//:go_default_library",
        "@in_gopkg_fsnotify_v1//:go_default_library",
        "@in_gopkg_yaml.v2//:go_default_library",
    ],
)

go_binary(
    name = "contrail-provisioner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "contrail-provisioner-image",
    embed = [":go_default_library"],
    goos = "linux",
    base = "@go_debug_image_base//image:image",
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner",
)

container_push(
    name = "contrail-provisioner-push",
    image = ":contrail-provisioner-image",
    format = "Docker",
    registry = "gcr.io",
    repository = "eng-prod-237922/contrail-operator-provisioner",
    tag = "{BUILD_SCM_BRANCH}.{BUILD_SCM_REVISION}",
)

container_push(
    name = "contrail-provisioner-push-latest",
    image = ":contrail-provisioner-image",
    format = "Docker",
    registry = "gcr.io",
    repository = "eng-prod-237922/contrail-operator-provisioner",
    tag = "{BUILD_SCM_BRANCH}.latest",
)
