load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//python:image.bzl", "py_layer")
load("@rules_python//python:defs.bzl", "py_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@ringbuilder//:requirements.bzl", "all_requirements")

py_layer(
    name = "external_deps",
    deps = all_requirements,
    filter = "@",
)

py3_image(
    name = "ringbuilder",
    srcs = ["main.py"],
    layers = [
        ":external_deps",
    ],
    base = "@py3_debug_image_base//image:image",
    main = "main.py",
)

container_push(
    name = "ringbuilder-push",
    image = ":ringbuilder",
    format = "Docker",
    registry = "gcr.io",
    repository = "engprod-269421/ringbuilder",
    tag = "{BUILD_SCM_BRANCH}.{BUILD_SCM_REVISION}",
)

container_push(
    name = "ringbuilder-push-latest",
    image = ":ringbuilder",
    format = "Docker",
    registry = "gcr.io",
    repository = "engprod-269421/ringbuilder",
    tag = "{BUILD_SCM_BRANCH}.latest",
)

container_push(
    name = "ringbuilder-push-local",
    image = ":ringbuilder",
    format = "Docker",
    registry = "localhost:5000",
    repository = "contrail-operator/engprod-269421/ringbuilder",
    tag = "master.latest",
)
