load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//python:image.bzl", "py_layer")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@ringcontroller//:requirements.bzl", "all_requirements")

py_layer(
    name = "external_deps",
    deps = all_requirements,
    filter = "@",
)

py_test(
    name = "test_ring_controller",
    srcs = ["test_ring_controller.py", "ring_controller.py"],
    python_version = "PY3",
    deps = all_requirements,
)

py3_image(
    name = "ringcontroller",
    srcs = ["main.py", "ring_controller.py"],
    layers = [
        ":external_deps",
    ],
    base = "@py3_debug_image_base//image:image",
    main = "main.py",
)

container_push(
    name = "ringcontroller-push",
    image = ":ringcontroller",
    format = "Docker",
    registry = "gcr.io",
    repository = "engprod-269421/ringcontroller",
    tag = "{BUILD_SCM_BRANCH}.{BUILD_SCM_REVISION}",
)

container_push(
    name = "ringcontroller-push-latest",
    image = ":ringcontroller",
    format = "Docker",
    registry = "gcr.io",
    repository = "engprod-269421/ringcontroller",
    tag = "{BUILD_SCM_BRANCH}.latest",
)

container_push(
    name = "ringcontroller-push-local",
    image = ":ringcontroller",
    format = "Docker",
    registry = "localhost:5000",
    repository = "contrail-operator/engprod-269421/ringcontroller",
    tag = "master.latest",
)
