load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//python:image.bzl", "py_layer")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@contrail-operator-ringcontroller//:requirements.bzl", "all_requirements")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit")

py_layer(
    name = "external_deps",
    deps = all_requirements,
    filter = "@",
)

py_test(
    name = "test_ring_controller",
    srcs = [
        "test_ring_controller.py",
        "ring_controller.py",
    ],
    python_version = "PY3",
    deps = all_requirements,
)

py3_image(
    name = "contrail-operator-ringcontroller",
    srcs = [
        "main.py",
        "ring_controller.py",
    ],
    layers = [
        ":external_deps",
    ],
    base = ":ubi-minimal-python3",
    main = "main.py",
)

container_push(
    name = "contrail-operator-ringcontroller-push",
    image = ":contrail-operator-ringcontroller",
    format = "Docker",
    registry = "gcr.io",
    repository = "engprod-269421/contrail-operator-ringcontroller",
    tag = "{BUILD_SCM_BRANCH}.{BUILD_SCM_REVISION}",
)

container_push(
    name = "contrail-operator-ringcontroller-push-latest",
    image = ":contrail-operator-ringcontroller",
    format = "Docker",
    registry = "gcr.io",
    repository = "engprod-269421/contrail-operator-ringcontroller",
    tag = "{BUILD_SCM_BRANCH}.latest",
)

container_push(
    name = "contrail-operator-ringcontroller-push-local",
    image = ":contrail-operator-ringcontroller",
    format = "Docker",
    registry = "{LOCAL_REGISTRY}",
    repository = "contrail-operator/engprod-269421/contrail-operator-ringcontroller",
    tag = "master.latest",
)

container_run_and_commit(
    name = "ubi-minimal-python3",
    image = "@ubi-minimal//image:image",
    commands = [
        "microdnf install python3",
        "pip3 install greenlet==0.4.16 netifaces==0.10.9",
        "ln -s /usr/bin/python3 /usr/bin/python",
    ],
)
