load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = [
        "config_status_monitor.go",
        "main.go",
    ],
    importpath = "github.com/Juniper/contrail-operator/statusmonitor",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/contrail/v1alpha1:go_default_library",
        "//statusmonitor/uves:go_default_library",
        "@in_gopkg_yaml.v2//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_client_go//util/retry:go_default_library",
    ],
)

go_binary(
    name = "statusmonitor",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "contrail-statusmonitor-image",
    embed = [":go_default_library"],
    goos = "linux",
    base = "@go_debug_image_base//image:image",
    importpath = "github.com/Juniper/contrail-operator/statusmonitor",
)

container_push(
    name = "contrail-statusmonitor-push",
    image = ":contrail-statusmonitor-image",
    format = "Docker",
    registry = "gcr.io",
    repository = "engprod-269421/contrail-statusmonitor",
    tag = "{BUILD_SCM_BRANCH}.{BUILD_SCM_REVISION}",
)

container_push(
    name = "contrail-statusmonitor-push-latest",
    image = ":contrail-statusmonitor-image",
    format = "Docker",
    registry = "gcr.io",
    repository = "engprod-269421/contrail-statusmonitor",
    tag = "{BUILD_SCM_BRANCH}.latest",
)

container_push(
    name = "contrail-statusmonitor-push-local",
    image = ":contrail-statusmonitor-image",
    format = "Docker",
    registry = "localhost:5000",
    repository = "contrail-statusmonitor",
    tag = "latest",
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_status_monitor_test.go",
        "main_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/contrail/v1alpha1:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/fake:go_default_library",
    ],
)
