load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "crdsloader-crds-layer",
    base = "@go_debug_image_base//image:image",
    directory = "/crds",
    files = [
        "//deploy/crds",
    ],
)

container_image(
    name = "crdsloader-image",
    base = ":crdsloader-crds-layer",
    directory = "/app",
    entrypoint = [
        "sh",
        "-c",
        "/app/kubectl apply -f /crds && /app/kubectl wait crds --for=condition=Established --timeout=2m managers.contrail.juniper.net",
    ],
    files = [
        "//deploy/crds",
        "@kubectl//file",
    ],
)

container_push(
    name = "crdsloader-push-local",
    format = "Docker",
    image = ":crdsloader-image",
    registry = "{LOCAL_REGISTRY}",
    repository = "crdsloader",
    tag = "master.latest",
)

container_push(
    name = "crdsloader-push",
    format = "Docker",
    image = ":crdsloader-image",
    registry = "gcr.io",
    repository = "engprod-269421/crdsloader",
    tag = "{BUILD_SCM_BRANCH}.{BUILD_SCM_REVISION}",
)

container_push(
    name = "crdsloader-push-latest",
    format = "Docker",
    image = ":crdsloader-image",
    registry = "gcr.io",
    repository = "engprod-269421/crdsloader",
    tag = "{BUILD_SCM_BRANCH}.latest",
)
