load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "contrail-operator-crdsloader-crds-layer",
    base = "@go_debug_image_base//image:image",
    directory = "/crds",
    files = [
        "//deploy/crds",
    ],
)

container_image(
    name = "contrail-operator-crdsloader-image",
    base = ":contrail-operator-crdsloader-crds-layer",
    directory = "/app",
    entrypoint = [
        "sh",
        "-c",
        "/app/kubectl apply -f /crds && /app/kubectl wait crds --for=condition=Established --timeout=2m managers.contrail.juniper.net",
    ],
    files = [
        "//deploy/crds",
        "@kubectl//file",
    ],
)

container_push(
    name = "contrail-operator-crdsloader-push-local",
    format = "Docker",
    image = ":contrail-operator-crdsloader-image",
    registry = "{LOCAL_REGISTRY}",
    repository = "contrail-operator/engprod-269421/contrail-operator-crdsloader",
    tag = "master.latest",
)

container_push(
    name = "contrail-operator-crdsloader-push",
    format = "Docker",
    image = ":contrail-operator-crdsloader-image",
    registry = "gcr.io",
    repository = "engprod-269421/contrail-operator-crdsloader",
    tag = "{BUILD_SCM_BRANCH}.{BUILD_SCM_REVISION}",
)

container_push(
    name = "contrail-operator-crdsloader-push-latest",
    format = "Docker",
    image = ":contrail-operator-crdsloader-image",
    registry = "gcr.io",
    repository = "engprod-269421/contrail-operator-crdsloader",
    tag = "{BUILD_SCM_BRANCH}.latest",
)
