load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["confignode.go"],
    importpath = "github.com/Juniper/contrail-operator/contrail-provisioner/confignode",
    visibility = ["//visibility:public"],
    deps = [
        "//contrail-provisioner/contrail-go-types:go_default_library",
        "//contrail-provisioner/contrailclient:go_default_library",
        "//contrail-provisioner/contrailnode:go_default_library",
    ],
)
